samples/chapter18/sample-istio-fault-injection-abort.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
    fault:
      abort:
        percent: 50
        httpStatus: 500
