samples/chapter18/sample-istio-fault-injection-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
    fault:
      delay:
        percent: 50
        fixedDelay: 2.000s
