samples/chapter18/sample-istio-specific-request.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v2
    match:
    - headers:
        cookie:
          regex: ^(.*?;)?(user=test)(;.*)?$
  - route:
    - destination:
        host: reviews
        subset: v1
